html css completed

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
       <!-- first page end -->
 
+      <!-- second page start -->
+
       <section id="locations">
             <header class="locations-head">
                   <h2>The Perfect Travelling Experience</h2>
@@ -42,6 +44,72 @@
                   <img src="./img/cloud.png" alt="awesome cloud" class=" cloud cloud2">
             </header>
       </section>
+
+      <!-- second page end -->
+
+      <!-- third page start -->
+      <section id="benefits">
+            <header class="benefits-head">
+                  <h2>The Perfect Travel</h2>
+                  <h3>We cover everything - picking the perfect hotel <br /> flight and destination</h3>
+            </header>
+            <div class="cards">
+                  <div class="card">
+                        <div class="card-icon">
+                              <img src="/icons/route-solid.svg" alt="route icon">
+                        </div>
+                        <h2>Travel</h2>
+                        <p>Travel in over 250 countries with no effort</p>
+                  </div>
+                  <div class="card">
+                        <div class="card-icon">
+                              <img src="/icons/bed-solid.svg" alt="bed icon">
+                        </div>
+                        <h2>Hotel</h2>
+                        <p>Hotels located near popular areas.</p>
+                  </div>
+                  <div class="card">
+                        <div class="card-icon">
+                              <img src="/icons/plane-departure-solid.svg" alt="route icon">
+                        </div>
+                        <h2>Flight</h2>
+                        <p>Flight included in every purchased trip.</p>
+
+
+                  </div>
+      </section>
+
+      <!-- third page end -->
+      <!-- contact section -->
+
+      <section id="contact">
+            <div class="form-wrapper">
+                  <header class="form-head">
+                        <h2>Contact Us</h2>
+                  </header>
+                  <form>
+                        <div class="name-form">
+                              <label for="name">Name:</label>
+                              <input type="text" name="name" required>
+                        </div>
+                        <div class="email-form">
+                              <label for="email">Email:</label>
+                              <input type="email" name="email" required>
+                        </div>
+                        <button type="submit" class="book-btn">Submit</button>
+                  </form>
+            </div>
+      </section>
+      <footer>
+            <div class="footer-wrapper">
+                  <h5>Travelle &copy; </h5>
+                  <ul>
+                        <li><a href=""><img src="./icons/twitter.svg" alt=""></a></li>
+                        <li><a href=""><img src="./icons/youtube.svg" alt=""></a></li>
+                        <li><a href=""><img src="./icons/instagram.svg" alt=""></a></li>
+                  </ul>
+            </div>
+      </footer>
       <script src="app.js"></script>
 </body>
 
