--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <section id="contact">
             <div class="form-wrapper">
                   <header class="form-head">
-                        <h2>Contact Us</h2>
+                        <h2>Contact Form</h2>
                   </header>
                   <form>
                         <div class="name-form">
@@ -104,9 +104,9 @@
             <div class="footer-wrapper">
                   <h5>Travelle &copy; </h5>
                   <ul>
-                        <li><a href=""><img src="./icons/twitter.svg" alt=""></a></li>
-                        <li><a href=""><img src="./icons/youtube.svg" alt=""></a></li>
-                        <li><a href=""><img src="./icons/instagram.svg" alt=""></a></li>
+                        <li><a href="#logo"><img src="./icons/twitter.svg" alt=""></a></li>
+                        <li><a href="#logo"><img src="./icons/youtube.svg" alt=""></a></li>
+                        <li><a href="#logo"><img src="./icons/instagram.svg" alt=""></a></li>
                   </ul>
             </div>
       </footer>
