--- a/index.html
+++ b/index.html
@@ -26,80 +26,82 @@
                   </ul>
             </nav>
       </header>
-      <section class="hero">
-            <h2>Travel Beyond Limits</h2>
-            <h3>Start your travel at an affordable price with Travelle <br> Contact us now below.</h3>
-            <button class="book-btn">Book Now</button>
-      </section>
+      <main>
+            <section class="hero">
+                  <h2>Travel Beyond Limits</h2>
+                  <h3>Start your travel at an affordable price with Travelle <br> Contact us now below.</h3>
+                  <button class="book-btn">Book Now</button>
+            </section>
 
-      <!-- first page end -->
+            <!-- first page end -->
 
-      <!-- second page start -->
+            <!-- second page start -->
 
-      <section id="locations">
-            <header class="locations-head">
-                  <h2>The Perfect Travelling Experience</h2>
-                  <h3>We will help you find your perfect hotel, <br /> flight and travel destination.</h3>
-                  <img src="./img/cloud.png" alt="awesome cloud" class=" cloud cloud1">
-                  <img src="./img/cloud.png" alt="awesome cloud" class=" cloud cloud2">
-            </header>
-      </section>
-
-      <!-- second page end -->
-
-      <!-- third page start -->
-      <section id="benefits">
-            <header class="benefits-head">
-                  <h2>The Perfect Travel</h2>
-                  <h3>We cover everything - picking the perfect hotel <br /> flight and destination</h3>
-            </header>
-            <div class="cards">
-                  <div class="card">
-                        <div class="card-icon">
-                              <img src="/icons/route-solid.svg" alt="route icon">
-                        </div>
-                        <h2>Travel</h2>
-                        <p>Travel in over 250 countries with no effort</p>
-                  </div>
-                  <div class="card">
-                        <div class="card-icon">
-                              <img src="/icons/bed-solid.svg" alt="bed icon">
-                        </div>
-                        <h2>Hotel</h2>
-                        <p>Hotels located near popular areas.</p>
-                  </div>
-                  <div class="card">
-                        <div class="card-icon">
-                              <img src="/icons/plane-departure-solid.svg" alt="route icon">
-                        </div>
-                        <h2>Flight</h2>
-                        <p>Flight included in every purchased trip.</p>
-
-
-                  </div>
-      </section>
-
-      <!-- third page end -->
-      <!-- contact section -->
-
-      <section id="contact">
-            <div class="form-wrapper">
-                  <header class="form-head">
-                        <h2>Contact Form</h2>
+            <section id="locations">
+                  <header class="locations-head">
+                        <h2>The Perfect Travelling Experience</h2>
+                        <h3>We will help you find your perfect hotel, <br /> flight and travel destination.</h3>
+                        <img src="./img/cloud.png" alt="awesome cloud" class=" cloud cloud1">
+                        <img src="./img/cloud.png" alt="awesome cloud" class=" cloud cloud2">
                   </header>
-                  <form>
-                        <div class="name-form">
-                              <label for="name">Name:</label>
-                              <input type="text" name="name" required>
+            </section>
+
+            <!-- second page end -->
+
+            <!-- third page start -->
+            <section id="benefits">
+                  <header class="benefits-head">
+                        <h2>The Perfect Travel</h2>
+                        <h3>We cover everything - picking the perfect hotel <br /> flight and destination</h3>
+                  </header>
+                  <div class="cards">
+                        <div class="card">
+                              <div class="card-icon">
+                                    <img src="./icons/route-solid.svg" alt="route icon">
+                              </div>
+                              <h2>Travel</h2>
+                              <p>Travel in over 250 countries with no effort</p>
                         </div>
-                        <div class="email-form">
-                              <label for="email">Email:</label>
-                              <input type="email" name="email" required>
+                        <div class="card">
+                              <div class="card-icon">
+                                    <img src="./icons/bed-solid.svg" alt="bed icon">
+                              </div>
+                              <h2>Hotel</h2>
+                              <p>Hotels located near popular areas.</p>
                         </div>
-                        <button type="submit" class="book-btn">Submit</button>
-                  </form>
-            </div>
-      </section>
+                        <div class="card">
+                              <div class="card-icon">
+                                    <img src="./icons/plane-departure-solid.svg" alt="route icon">
+                              </div>
+                              <h2>Flight</h2>
+                              <p>Flight included in every purchased trip.</p>
+
+
+                        </div>
+            </section>
+
+            <!-- third page end -->
+            <!-- contact section -->
+
+            <section id="contact">
+                  <div class="form-wrapper">
+                        <header class="form-head">
+                              <h2>Contact Form</h2>
+                        </header>
+                        <form>
+                              <div class="name-form">
+                                    <label for="name">Name:</label>
+                                    <input type="text" name="name" required>
+                              </div>
+                              <div class="email-form">
+                                    <label for="email">Email:</label>
+                                    <input type="email" name="email" required>
+                              </div>
+                              <button type="submit" class="book-btn">Submit</button>
+                        </form>
+                  </div>
+            </section>
+      </main>
       <footer>
             <div class="footer-wrapper">
                   <h5>Travelle &copy; </h5>
