--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="description" content="Travelle is a travel agency website that helps to choose holiday destination">
       <meta name="robots" content="index, follow">
       <link href="https://fonts.googleapis.com/css2?family=Pattaya&family=Poppins&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="/style/styles.css">
       <title>Travelle | Travelling Agency</title>
 </head>
 
