--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="modal-bg">
             <div class="modal">
                   <header class="form-head">
-                        <h2>Contact Form</h2>
+                        <h2>Hey! Want us to contact you?</h2>
                   </header>
                   <form>
                         <div class="name-form">
