--- a/index.html
+++ b/index.html
@@ -112,23 +112,25 @@
                   </ul>
             </div>
       </footer>
-      <div class="modal-bg">
-            <div class="modal">
-                  <header class="form-head">
-                        <h2>Hey! Want us to contact you?</h2>
-                  </header>
-                  <form>
-                        <div class="name-form">
-                              <label for="name">Name:</label>
-                              <input type="text" name="name" required>
-                        </div>
-                        <div class="email-form">
-                              <label for="email">Email:</label>
-                              <input type="email" name="email" required>
-                        </div>
-                        <button type="submit" class="book-btn">Submit</button>
-                  </form>
-                  <span class="modal-close">X</span>
+      <div class="background">
+            <div class="modal-bg">
+                  <div class="modal">
+                        <header class="form-head">
+                              <h2>Hey! Want us to contact you?</h2>
+                        </header>
+                        <form>
+                              <div class="name-form">
+                                    <label for="name">Name:</label>
+                                    <input type="text" name="name" required>
+                              </div>
+                              <div class="email-form">
+                                    <label for="email">Email:</label>
+                                    <input type="email" name="email" required>
+                              </div>
+                              <button type="submit" class="book-btn">Submit</button>
+                        </form>
+                        <span class="modal-close">X</span>
+                  </div>
             </div>
       </div>
       <script src="app.js"></script>
