--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                   </ul>
             </div>
       </footer>
+
+      <!-- MODAL POPUP-->
+
       <div class="background">
             <div class="modal-bg">
                   <div class="modal">
