--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
       <div class="background">
             <div class="modal-bg">
                   <div class="modal">
+                        <button type="submit" class="modal-close-btn">Close</button>
                         <header class="form-head">
                               <h2>Hey! Want us to contact you?</h2>
                         </header>
@@ -132,7 +133,7 @@
                               </div>
                               <button type="submit" class="book-btn">Submit</button>
                         </form>
-                        <span class="modal-close">X</span>
+
                   </div>
             </div>
       </div>
